// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extensions filters out non-extension info items 1`] = `
<RCTScrollView
  accessibilityLabel="Extensions"
  style={
    {
      "backgroundColor": "#ffffff",
      "flexGrow": 0,
      "flexShrink": 1,
      "minWidth": 0,
      "padding": 10,
    }
  }
>
  <View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f5f5f5",
          "borderColor": "#cccccc",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginBottom": 8,
          "opacity": 1,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        Extension A
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f5f5f5",
          "borderColor": "#cccccc",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginBottom": 8,
          "opacity": 1,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        Extension B
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f5f5f5",
          "borderColor": "#cccccc",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginBottom": 8,
          "opacity": 1,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        Extension C
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Extensions handles single extension 1`] = `
<RCTScrollView
  accessibilityLabel="Extensions"
  style={
    {
      "backgroundColor": "#ffffff",
      "flexGrow": 0,
      "flexShrink": 1,
      "minWidth": 0,
      "padding": 10,
    }
  }
>
  <View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f5f5f5",
          "borderColor": "#cccccc",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginBottom": 8,
          "opacity": 1,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        Single Extension
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Extensions renders empty extensions list 1`] = `
<RCTScrollView
  accessibilityLabel="Extensions"
  style={
    {
      "backgroundColor": "#ffffff",
      "flexGrow": 0,
      "flexShrink": 1,
      "minWidth": 0,
      "padding": 10,
    }
  }
>
  <View />
</RCTScrollView>
`;

exports[`Extensions renders extensions list correctly 1`] = `
<RCTScrollView
  accessibilityLabel="Extensions"
  style={
    {
      "backgroundColor": "#ffffff",
      "flexGrow": 0,
      "flexShrink": 1,
      "minWidth": 0,
      "padding": 10,
    }
  }
>
  <View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f5f5f5",
          "borderColor": "#cccccc",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginBottom": 8,
          "opacity": 1,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        Extension A
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f5f5f5",
          "borderColor": "#cccccc",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginBottom": 8,
          "opacity": 1,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        Extension B
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f5f5f5",
          "borderColor": "#cccccc",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginBottom": 8,
          "opacity": 1,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        Extension C
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Extensions renders with accessibility label 1`] = `
<RCTScrollView
  accessibilityLabel="Extensions"
  style={
    {
      "backgroundColor": "#ffffff",
      "flexGrow": 0,
      "flexShrink": 1,
      "minWidth": 0,
      "padding": 10,
    }
  }
>
  <View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f5f5f5",
          "borderColor": "#cccccc",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginBottom": 8,
          "opacity": 1,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        Extension A
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f5f5f5",
          "borderColor": "#cccccc",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginBottom": 8,
          "opacity": 1,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        Extension B
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f5f5f5",
          "borderColor": "#cccccc",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginBottom": 8,
          "opacity": 1,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        Extension C
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
